# Customer-Churn-Prediction

./: .gitignore  Dockerfile  README.md  churn.ipynb  pyproject.toml  railway.json
backend/: ARCHITECTURE.md  Dockerfile  README.md  __init__.py  main.py  requirements.txt
backend/api/: routes.py
backend/core/: __init__.py  config.py  model_loader.py
backend/models/: __init__.py  request.py  response.py
backend/services/: __init__.py  prediction.py  preprocessing.py
frontend/: README.md  app.py
models/: feature_names.pkl  label_encoders.pkl  model_metadata.pkl  scaler.pkl  xgboost_model.pkl
